@@ -174,6 +174,13 @@ name|CorruptIndexException
 throws|,
 name|IOException
 block|{
+name|boolean
+name|success
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
 name|directory
 operator|=
 name|dir
@@ -234,6 +241,29 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+name|success
+operator|=
+literal|true
+expr_stmt|;
+block|}
+finally|finally
+block|{
+comment|// With lock-less commits, it's entirely possible (and
+comment|// fine) to hit a FileNotFound exception above. In
+comment|// this case, we want to explicitly close any subset
+comment|// of things that were opened so that we don't have to
+comment|// wait for a GC to do so.
+if|if
+condition|(
+operator|!
+name|success
+condition|)
+block|{
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 DECL|method|getSkipInterval
 specifier|public
